generate code for caveat API and add tests
https://github.com/authzed/api/pull/38
