# proto/apidocs.swagger.json
@@ -583,6 +583,14 @@
       },
       "additionalProperties": {}
     },
+    "protobufNullValue": {
+      "type": "string",
+      "enum": [
+        "NULL_VALUE"
+      ],
+      "default": "NULL_VALUE",
+      "description": "`NullValue` is a singleton enumeration to represent the null value for the\n`Value` type union.\n\n The JSON representation for `NullValue` is JSON `null`.\n\n - NULL_VALUE: Null value."
+    },
     "rpcStatus": {
       "type": "object",
       "properties": {
@@ -871,6 +879,20 @@
       },
       "description": "Consistency will define how a request is handled by the backend.\nBy defining a consistency requirement, and a token at which those\nrequirements should be applied, where applicable."
     },
+    "v1ContextualizedCaveat": {
+      "type": "object",
+      "properties": {
+        "caveatName": {
+          "type": "string",
+          "title": "caveat_name is the name of the caveat expression to use, as defined in the schema *"
+        },
+        "context": {
+          "type": "object",
+          "title": "context consists of any named values that are defined at write time for the caveat expression *"
+        }
+      },
+      "description": "ContextualizedCaveat represents a reference to a caveat to be used by caveated relationships.\nThe context consists of key-value pairs that will be injected at evaluation time.\nThe keys must match the arguments defined on the caveat in the schema."
+    },
     "v1DeleteRelationshipsRequest": {
       "type": "object",
       "properties": {
@@ -1102,6 +1124,10 @@
         "subject": {
           "$ref": "#/definitions/v1SubjectReference",
           "description": "subject is the subject to which the resource is related, in some manner."
+        },
+        "optionalCaveat": {
+          "$ref": "#/definitions/v1ContextualizedCaveat",
+          "title": "optional_caveat is a reference to a the caveat that must be enforced over the relationship"
         }
       },
       "description": "Relationship specifies how a resource relates to a subject. Relationships\nform the data for the graph over which all permissions questions are\nanswered."
